# game-manual-extractor

./: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
notebooks/: downloading_pdfs.ipynb
src/: config.py  data.py  extractor.py  game_info.py  main.py  utils.py
src/data_extraction/: extractor.py  soup.py
